# medgemma-impact-challenge

./: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  requirements-gguf.txt  requirements-local.txt  requirements.txt
docs/: EXAMPLE_RUN.md
scripts/: download_medgemma_gguf.py  download_medgemma_local.py
src/: __init__.py  main.py  models.py  state.py
src/agents/: __init__.py  auditor.py  scribe.py  verifier.py
src/graphs/: __init__.py  clinical_workflow.py
src/tools/: __init__.py  drug_api.py  medical_db.py
src/web/: __init__.py  app.py
src/web/static/: index.html
tests/: __init__.py  test_medgemma.py  test_state.py
